--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <footer>
         <div class="container">
-            <p data-translate-key="footer_copyright">&copy; By ThunderBolt 45</p>
+            <p>&copy; By ThunderBolt 45</p>
             <ul>
                 <li><a href="#" data-translate-key="footer_terms">Điều khoản dịch vụ</a></li>
                 <li><a href="#" data-translate-key="footer_privacy">Chính sách bảo mật</a></li>
