--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">Luk Global MOOCS</div>
-            <nav>
+            <nav id="mainNav">
                 <ul>
                     <li><a href="#" data-translate-key="nav_explore_courses">Khám phá khóa học</a></li>
                     <li><a href="#" data-translate-key="nav_instructors">Giảng viên</a></li>
@@ -31,6 +31,8 @@
         <option value="ja">日本語</option>
         </select>
 </div>
+        <div class="menu-toggle" id="mobileMenuToggle">
+            <i class="fas fa-bars"></i>
             </div>
         </div>
     </header>
@@ -281,7 +283,7 @@
             <button id="sendChatbotMessageBtn" class="button" data-translate-key="chatbot_send_button">Gửi</button>
         </div>
     </div>
-
+    <script src="./button.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
