--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">Luk Global MOOCS</div>
+            <div class="logo">TB45.Courses</div>
             <nav id="mainNav">
                 <ul>
                     <li><a href="#" data-translate-key="nav_explore_courses">Khám phá khóa học</a></li>
@@ -27,8 +27,6 @@
     <select id="languageSelector">
         <option value="vi">Tiếng Việt</option>
         <option value="en">English</option>
-        <option value="fr">Français</option>
-        <option value="ja">日本語</option>
         </select>
 </div>
         <div class="menu-toggle" id="mobileMenuToggle">
