--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
             <div class="logo">TB45.Courses</div>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#" data-translate-key="nav_explore_courses">Khám phá khóa học</a></li>
+<li><a href="courses.html" data-translate-key="nav_explore_courses">Khám phá khóa học</a></li>
                     <li><a href="#" data-translate-key="nav_instructors">Giảng viên</a></li>
                     <li><a href="#" data-translate-key="nav_about_us">Về chúng tôi</a></li>
                     <li><a href="#" id="loginBtnHeader" data-translate-key="nav_login">Đăng nhập</a></li>
